
BEGIN;

-- Enum types
CREATE TYPE public.categoria_annuncio_enum AS ENUM (
  'libri',
  'informatica',
  'abbigliamento',
  'strumenti_musicali',
  'altro'
);

CREATE TYPE public.tipo_annuncio_enum AS ENUM (
  'vendita',
  'scambio',
  'regalo'
);

CREATE TYPE public.stato_annuncio_enum AS ENUM (
  'attivo',
  'concluso',
  'annullato'
);

CREATE TYPE public.stato_offerta_enum AS ENUM (
  'in_attesa',
  'accettata',
  'rifiutata',
  'ritirata'
);

-- Tabella utenti
CREATE TABLE public.utente (
  matricola character varying(10) PRIMARY KEY,
  nome character varying(20) NOT NULL,
  cognome character varying(20) NOT NULL,
  mail character varying,
  password character varying(255),
  CONSTRAINT chk_utente_nome CHECK (char_length(trim(both from nome)) > 0),
  CONSTRAINT chk_utente_cognome CHECK (char_length(trim(both from cognome)) > 0),
  CONSTRAINT chk_utente_mail CHECK (char_length(trim(both from mail)) > 0),
  CONSTRAINT chk_utente_password CHECK (char_length(trim(both from password)) > 0),
  CONSTRAINT uq_utente_mail UNIQUE (mail)
);

-- Tabella annunci
CREATE TABLE public.annuncio (
  id_annuncio integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  titolo character varying(100) NOT NULL,
  descrizione text,
  prezzo numeric(8,2),
  data timestamp without time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
  matricola_venditore character varying(10) NOT NULL,
  categoria public.categoria_annuncio_enum,
  tipo public.tipo_annuncio_enum NOT NULL,
  stato public.stato_annuncio_enum DEFAULT 'attivo'::public.stato_annuncio_enum,
  CONSTRAINT chk_annuncio_titolo CHECK (char_length(trim(both from titolo)) > 0),
  CONSTRAINT chk_annuncio_descrizione CHECK (char_length(trim(both from descrizione)) > 0),
  CONSTRAINT chk_annuncio_prezzo_tipo CHECK (
    ((tipo = 'vendita'::public.tipo_annuncio_enum) AND (prezzo IS NOT NULL) AND (prezzo > 0))
    OR ((tipo = ANY (ARRAY['scambio'::public.tipo_annuncio_enum, 'regalo'::public.tipo_annuncio_enum])) AND (prezzo IS NULL))
  ),
  CONSTRAINT fk_annuncio_venditore FOREIGN KEY (matricola_venditore)
    REFERENCES public.utente(matricola)
);

-- Tabella immagini annuncio
CREATE TABLE public.immagine_annuncio (
  id_immagine integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  id_annuncio integer NOT NULL,
  path character varying(255) NOT NULL,
  ordine integer DEFAULT 0 NOT NULL,
  is_principale boolean DEFAULT false NOT NULL,
  uploaded_at timestamp without time zone DEFAULT now() NOT NULL,
  CONSTRAINT chk_immagine_annuncio_ordine CHECK ((ordine >= 1) AND (ordine <= 5)),
  CONSTRAINT chk_immagine_annuncio_path CHECK (char_length(trim(both from path)) > 0),
  CONSTRAINT uq_immagine_annuncio_ordine UNIQUE (id_annuncio, ordine),
  CONSTRAINT fk_immagine_annuncio_annuncio FOREIGN KEY (id_annuncio)
    REFERENCES public.annuncio(id_annuncio) ON DELETE CASCADE
);

-- Tabella offerte
CREATE TABLE public.offerta (
  id_offerta integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  id_annuncio integer NOT NULL,
  matricola_offerente character varying NOT NULL,
  stato public.stato_offerta_enum DEFAULT 'in_attesa'::public.stato_offerta_enum,
  importo_proposto numeric(8,2),
  messaggio text,
  data_offerta timestamp without time zone DEFAULT now(),
  CONSTRAINT chk_offerta_importo_pos CHECK ((importo_proposto IS NULL) OR (importo_proposto > 0)),
  CONSTRAINT fk_offerta_annuncio FOREIGN KEY (id_annuncio)
    REFERENCES public.annuncio(id_annuncio),
  CONSTRAINT fk_offerta_offerente FOREIGN KEY (matricola_offerente)
    REFERENCES public.utente(matricola) ON DELETE CASCADE
);

-- Tabella oggetti di scambio
CREATE TABLE public.oggetto_scambio (
  id_oggetto integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nome_oggetto text NOT NULL,
  id_offerta integer,
  path text,
  CONSTRAINT chk_oggetto_scambio_nome CHECK (char_length(trim(both from nome_oggetto)) > 0),
  CONSTRAINT chk_oggetto_scambio_path CHECK (char_length(trim(both from path)) > 0),
  CONSTRAINT fk_oggetto_scambio_offerta FOREIGN KEY (id_offerta)
    REFERENCES public.offerta(id_offerta) ON DELETE CASCADE
);

-- Tabella transazioni
CREATE TABLE public.transazione (
  id_transazione integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  data_conclusione timestamp without time zone DEFAULT now(),
  id_offerta integer UNIQUE,
  id_annuncio integer UNIQUE,
  CONSTRAINT fk_transazione_offerta FOREIGN KEY (id_offerta)
    REFERENCES public.offerta(id_offerta) ON DELETE RESTRICT,
  CONSTRAINT fk_transazione_annuncio FOREIGN KEY (id_annuncio)
    REFERENCES public.annuncio(id_annuncio) ON DELETE RESTRICT
);

-- Tabella recensioni
CREATE TABLE public.recensioni (
  id_recensione integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  id_utente_recensito character varying(20) NOT NULL,
  id_utente_recensore character varying(20) NOT NULL,
  voto integer NOT NULL,
  commento text,
  data_recensione timestamp without time zone DEFAULT CURRENT_TIMESTAMP,
  id_transazione integer,
  CONSTRAINT chk_recensioni_diversi CHECK (id_utente_recensore <> id_utente_recensito),
  CONSTRAINT chk_recensioni_voto CHECK ((voto >= 1) AND (voto <= 5)),
  CONSTRAINT uq_recensioni_trans_recensore UNIQUE (id_transazione, id_utente_recensore),
  CONSTRAINT fk_recensioni_transazione FOREIGN KEY (id_transazione)
    REFERENCES public.transazione(id_transazione) ON DELETE CASCADE,
  CONSTRAINT fk_recensioni_recensore FOREIGN KEY (id_utente_recensore)
    REFERENCES public.utente(matricola) ON DELETE CASCADE,
  CONSTRAINT fk_recensioni_recensito FOREIGN KEY (id_utente_recensito)
    REFERENCES public.utente(matricola) ON DELETE CASCADE
);

-- Tabella wishlist
CREATE TABLE public.wishlist (
  id_wishlist integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  id_annuncio integer NOT NULL,
  id_utente character varying(20) NOT NULL,
  CONSTRAINT uq_wishlist_annuncio_utente UNIQUE (id_annuncio, id_utente),
  CONSTRAINT fk_wishlist_annuncio FOREIGN KEY (id_annuncio)
    REFERENCES public.annuncio(id_annuncio) ON DELETE CASCADE,
  CONSTRAINT fk_wishlist_utente FOREIGN KEY (id_utente)
    REFERENCES public.utente(matricola) ON DELETE CASCADE
);

COMMIT;
