package com.example.uninaswapoobd2425.model;

public enum categoriaAnnuncio {
    libri,
    informatica,
    abbigliamento,
    strumenti_musicali,
    altro
}
