package com.example.uninaswapoobd2425.model;

public enum statoAnnuncio {
    attivo,
    concluso,
    annullato,
}
