package com.example.uninaswapoobd2425.model;

public enum statoOfferta {
    in_attesa,
    accettata,
    rifiutata,
    ritirata
}
