package com.example.uninaswapoobd2425.model;

public enum tipoAnnuncio {
    vendita,
    scambio,
    regalo
}
